Bug 270811 - Plasma Desktop Crash
Summary: Plasma Desktop Crash
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-04-13 05:46 UTC by John Pyper
Modified: 2011-06-24 09:30 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description John Pyper 2011-04-13 05:46:49 UTC
Application: plasma-desktop (0.4)
KDE Platform Version: 4.6.2 (4.6.2)
Qt Version: 4.7.0
Operating System: Linux 2.6.35-28-generic x86_64
Distribution: Ubuntu 10.10

-- Information about the crash:
- What I was doing when the application crashed:

Plasma Desktop crashes immediately after inputting my login credentials.

The crash can be reproduced every time.

-- Backtrace:
Application: Plasma Desktop Shell (plasma-desktop), signal: Segmentation fault
[Current thread is 1 (Thread 0x7f4e8ff23780 (LWP 2489))]

Thread 3 (Thread 0x7f4e6ce95700 (LWP 2493)):
#0  0x00007f4e8f838387 in pthread_mutex_unlock (mutex=0x294da68) at forward.c:184
#1  0x00007f4e844b9b51 in g_main_context_prepare () from /lib/libglib-2.0.so.0
#2  0x00007f4e844b9e78 in ?? () from /lib/libglib-2.0.so.0
#3  0x00007f4e844ba45c in g_main_context_iteration () from /lib/libglib-2.0.so.0
#4  0x00007f4e8c9821e6 in QEventDispatcherGlib::processEvents (this=0x2905e80, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:417
#5  0x00007f4e8c954a02 in QEventLoop::processEvents (this=<value optimized out>, flags=) at kernel/qeventloop.cpp:149
#6  0x00007f4e8c954dec in QEventLoop::exec (this=0x7f4e6ce94d90, flags=) at kernel/qeventloop.cpp:201
#7  0x00007f4e8c85f2fd in QThread::exec (this=<value optimized out>) at thread/qthread.cpp:490
#8  0x00007f4e8c9345f8 in QInotifyFileSystemWatcherEngine::run (this=0x294ced0) at io/qfilesystemwatcher_inotify.cpp:248
#9  0x00007f4e8c86227e in QThreadPrivate::start (arg=0x294ced0) at thread/qthread_unix.cpp:266
#10 0x00007f4e84b6c971 in start_thread (arg=<value optimized out>) at pthread_create.c:304
#11 0x00007f4e8f82892d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#12 0x0000000000000000 in ?? ()

Thread 2 (Thread 0x7f4e667a7700 (LWP 2494)):
#0  0x00007f4e8f81c203 in __poll (fds=<value optimized out>, nfds=<value optimized out>, timeout=-1) at ../sysdeps/unix/sysv/linux/poll.c:87
#1  0x00007f4e844ba009 in ?? () from /lib/libglib-2.0.so.0
#2  0x00007f4e844ba45c in g_main_context_iteration () from /lib/libglib-2.0.so.0
#3  0x00007f4e8c9821e6 in QEventDispatcherGlib::processEvents (this=0x2a60470, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:417
#4  0x00007f4e8c954a02 in QEventLoop::processEvents (this=<value optimized out>, flags=) at kernel/qeventloop.cpp:149
#5  0x00007f4e8c954dec in QEventLoop::exec (this=0x7f4e667a6d90, flags=) at kernel/qeventloop.cpp:201
#6  0x00007f4e8c85f2fd in QThread::exec (this=<value optimized out>) at thread/qthread.cpp:490
#7  0x00007f4e8c9345f8 in QInotifyFileSystemWatcherEngine::run (this=0x2a5fa20) at io/qfilesystemwatcher_inotify.cpp:248
#8  0x00007f4e8c86227e in QThreadPrivate::start (arg=0x2a5fa20) at thread/qthread_unix.cpp:266
#9  0x00007f4e84b6c971 in start_thread (arg=<value optimized out>) at pthread_create.c:304
#10 0x00007f4e8f82892d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#11 0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7f4e8ff23780 (LWP 2489)):
[KCrash Handler]
#6  Plasma::TabBar::currentIndex (this=0x80000000) at ../../plasma/widgets/tabbar.cpp:334
#7  0x00007f4e74512350 in MicroBlog::createTimelineService (this=0x27a3ad0) at ../../../applets/microblog/microblog.cpp:888
#8  0x00007f4e74512790 in MicroBlog::downloadHistory (this=0x27a3ad0) at ../../../applets/microblog/microblog.cpp:850
#9  0x00007f4e74514b40 in MicroBlog::configChanged (this=0x27a3ad0) at ../../../applets/microblog/microblog.cpp:368
#10 0x00007f4e7450f957 in MicroBlog::init (this=0x27a3ad0) at ../../../applets/microblog/microblog.cpp:88
#11 0x00007f4e8f333cc0 in Plasma::ContainmentPrivate::initApplets (this=0x26bd9b0) at ../../plasma/containment.cpp:463
#12 0x00007f4e8f348c8c in Plasma::CoronaPrivate::importLayout (this=0x21c49d0, conf=<value optimized out>, mergeConfig=<value optimized out>) at ../../plasma/corona.cpp:566
#13 0x00007f4e8f349793 in Plasma::Corona::loadLayout (this=0x21c4bb0, configName=...) at ../../plasma/corona.cpp:494
#14 0x00007f4e8f34a283 in Plasma::Corona::initializeLayout (this=0x21c4bb0, configName=...) at ../../plasma/corona.cpp:397
#15 0x00007f4e8fb22140 in PlasmaApp::corona (this=0x21ac2b0) at ../../../../plasma/desktop/shell/plasmaapp.cpp:797
#16 0x00007f4e8fb2249c in PlasmaApp::setupDesktop (this=0x21ac2b0) at ../../../../plasma/desktop/shell/plasmaapp.cpp:299
#17 0x00007f4e8fb24e7c in PlasmaApp::qt_metacall (this=0x21ac2b0, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x2263e80) at ./plasmaapp.moc:155
#18 0x00007f4e8c967bde in QObject::event (this=0x21ac2b0, e=0x80000000) at kernel/qobject.cpp:1219
#19 0x00007f4e8bcc0186 in QApplication::event (this=0x21ac2b0, e=0x22806a0) at kernel/qapplication.cpp:2439
#20 0x00007f4e8bcbcfdc in QApplicationPrivate::notify_helper (this=0x21bdd20, receiver=0x21ac2b0, e=0x22806a0) at kernel/qapplication.cpp:4396
#21 0x00007f4e8bcc2aed in QApplication::notify (this=0x21ac2b0, receiver=0x21ac2b0, e=0x22806a0) at kernel/qapplication.cpp:4277
#22 0x00007f4e8d65c2f6 in KApplication::notify (this=0x21ac2b0, receiver=0x21ac2b0, event=0x22806a0) at ../../kdeui/kernel/kapplication.cpp:311
#23 0x00007f4e8c955cdc in QCoreApplication::notifyInternal (this=0x21ac2b0, receiver=0x21ac2b0, event=0x22806a0) at kernel/qcoreapplication.cpp:732
#24 0x00007f4e8c958c22 in sendEvent (receiver=0x0, event_type=<value optimized out>, data=0x216e7a0) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#25 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=<value optimized out>, data=0x216e7a0) at kernel/qcoreapplication.cpp:1373
#26 0x00007f4e8c982653 in sendPostedEvents (s=0x21c2410) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:220
#27 postEventSourceDispatch (s=0x21c2410) at kernel/qeventdispatcher_glib.cpp:277
#28 0x00007f4e844b6342 in g_main_context_dispatch () from /lib/libglib-2.0.so.0
#29 0x00007f4e844ba2a8 in ?? () from /lib/libglib-2.0.so.0
#30 0x00007f4e844ba45c in g_main_context_iteration () from /lib/libglib-2.0.so.0
#31 0x00007f4e8c982193 in QEventDispatcherGlib::processEvents (this=0x216e2b0, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:415
#32 0x00007f4e8bd6fa4e in QGuiEventDispatcherGlib::processEvents (this=0x80000000, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#33 0x00007f4e8c954a02 in QEventLoop::processEvents (this=<value optimized out>, flags=) at kernel/qeventloop.cpp:149
#34 0x00007f4e8c954dec in QEventLoop::exec (this=0x7fff67dfbd60, flags=) at kernel/qeventloop.cpp:201
#35 0x00007f4e8c958ebb in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1009
#36 0x00007f4e8fb06fb3 in kdemain (argc=<value optimized out>, argv=<value optimized out>) at ../../../../plasma/desktop/shell/main.cpp:118
#37 0x00007f4e8f760d8e in __libc_start_main (main=<value optimized out>, argc=<value optimized out>, ubp_av=<value optimized out>, init=<value optimized out>, fini=<value optimized out>, rtld_fini=<value optimized out>, stack_end=0x7fff67dfc138) at libc-start.c:226
#38 0x0000000000400669 in _start ()

Reported using DrKonqi
Comment 1 Dario Andres 2011-05-10 02:13:53 UTC
[Comment from a bug report cleaner]
The crash is related to the MicroBloggin widget. There were other common crashes caused by this widget on Ubuntu (bug 270327). Those were caused by an Ubuntu patch. Some lines of the backtrace matches, so it could be possible that this crash was also caused by that external patch.
Regards
Comment 2 Aaron J. Seigo 2011-06-24 09:29:43 UTC
Git commit f857398609c9472f0aeccfb0b7e003118605c14f by Aaron Seigo.
Committed on 24/06/2011 at 11:22.
Pushed by aseigo into branch 'master'.

cleanup and increase the safety around service creation and tabbar existence

BUG:270811

M  +13   -17   applets/microblog/microblog.cpp     

http://commits.kde.org/kdeplasma-addons/f857398609c9472f0aeccfb0b7e003118605c14f
Comment 3 Aaron J. Seigo 2011-06-24 09:30:53 UTC
Git commit 6667dd19fc2c2b87678b5f2b43bcb50535dca7db by Aaron Seigo.
Committed on 24/06/2011 at 11:22.
Pushed by aseigo into branch '4.7'.

cleanup and increase the safety around service creation and tabbar existence

BUG:270811

M  +13   -17   applets/microblog/microblog.cpp     

http://commits.kde.org/kdeplasma-addons/6667dd19fc2c2b87678b5f2b43bcb50535dca7db