cleanup and increase the safety around service creation and tabbar existence

BUG:270811